- Improve TestStage - Notify maximize/fullscreen before show on native side